deploy/overlays/dev/api-environment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-api
spec:
  template:
    spec:
      containers:
        - name: api
          startupProbe:
            httpGet:
              path: /dev/api/health/live
          livenessProbe:
            httpGet:
              path: /dev/api/health/live
          readinessProbe:
            httpGet:
              path: /dev/api/health/ready
