deploy/overlays/dev/ingress-path-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
spec:
  rules:
    - http:
        paths:
          - path: /dev/api
            pathType: Prefix
            backend:
              service:
                name: portfolio-api
                port:
                  number: 8000
          - path: /dev
            pathType: Prefix
            backend:
              service:
                name: portfolio-web
                port:
                  number: 8080
